hw2-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-hw2-k8s-service
spec:
  selector:
    app: otus-hw2-k8s-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web 
  type: NodePort
